Fix styling glitch on mobile parallax

--- a/src/styles/blocks/background.sass
+++ b/src/styles/blocks/background.sass
@@ -13,6 +13,9 @@
   .background-hero
     filter: brightness(60%)
 
+  .background-parallax, .background-parallax-spacer
+    display: none
+
 .background-parallax
   position: fixed
   z-index: -1000
